Add delay function to utils.ts Remove index.test.ts Update index.ts to export additional modules Update package.json to add ws dependency Update tsconfig.json to include test files Add ServerObjects.types.ts Add SlateApplicator.ts Add ArrayApplicator.ts Add ClientObjects.types.ts Add SharedObject.slate.test.ts Update package-lock.json to add ws dependency

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,10 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "declaration": true, // Aggiungi questa linea
-    "declarationMap": true // Opzionale, per generare mappe di dichiarazione
+    "declarationMap": true, // Opzionale, per generare mappe di dichiarazione
+    "strictNullChecks": false,
+    "noImplicitAny": false
   },
-  "include": ["src"],
+  "include": ["src", "tests/SharedObject.slate.test.ts", "tests/SharedObject.array.test.ts"],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
