--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "description": "",
   "devDependencies": {
     "@types/jest": "^29.5.13",
+    "@types/ws": "^8.5.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "ws": "^8.18.0"
+  }
 }
