--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "jess",
-  "version": "1.0.0",
+  "version": "0.1.0",
+
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  
   "scripts": {
     "build": "tsc",
-    "test": "jest",
+    "build:watch": "tsc -w",
+    "test": "node --experimental-vm-modules --inspect-brk ./node_modules/jest/bin/jest.js",
     "prepublishOnly": "npm run build"
   },
   "keywords": [],
@@ -20,10 +24,11 @@
     "@types/ws": "^8.5.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "cross-env": "^7.0.3"
   },
-  "type": "module",
-  "dependencies": {
-    "ws": "^8.18.0"
+    "dependencies": {
+    "ws": "^8.18.0",
+    "slate": "^0.110.2"
   }
 }
