--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "jess",
   "version": "0.1.0",
+  "keywords": [
+    "synchronization",
+    "javascript"
+  ],
+  "author": "Iorio Ivano <iorioivano@gmail.com>",
+  "license": "MIT",
+  "description": "A lightweight synchronization system for shared objects between clients and server.",
+
 
   "type": "module",
   "main": "dist/index.js",
@@ -9,25 +17,23 @@
     "dist"
   ],
   
+  
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc -w",
     "test": "node --experimental-vm-modules --inspect-brk ./node_modules/jest/bin/jest.js",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "pub": "npm publish --access public"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "@types/ws": "^8.5.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.7.2",
-    "cross-env": "^7.0.3"
+    "typescript": "^5.7.2"
   },
-    "dependencies": {
+  "dependencies": {
     "ws": "^8.18.0",
     "slate": "^0.110.2"
   }
