--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "author": "Iorio Ivano <iorioivano@gmail.com>",
   "license": "MIT",
   "description": "A lightweight synchronization system for shared objects between clients and server.",
-
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/priolo/jess.git"
+  },
 
   "type": "module",
   "main": "dist/index.js",
@@ -27,8 +30,8 @@
   },
 
   "devDependencies": {
-    "@types/jest": "^29.5.13",
-    "@types/ws": "^8.5.12",
+    "@types/jest": "^29.5.14",
+    "@types/ws": "^8.5.13",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
